# pacman_min_max

./: .gitignore  CMakeLists.txt  main.cpp
lib/: ai_play.cpp  ai_play.h  base4.cpp  base4.h  init_config.h  random_gen.cpp  random_gen.h
lib/board/: base_block.cpp  base_block.h  game_board.cpp  game_board.h  non_player.cpp  non_player.h
lib/player/: ghost.cpp  ghost.h  pacman.cpp  pacman.h  player.cpp  player.h
